--- a/about.html
+++ b/about.html
@@ -1,3 +1,13 @@
+<header>
+    <div style="background-color: rgba(142, 238, 238, 0.651); border-radius: 10px; padding: 20px; max-width: 100%; display: flex; justify-content: space-between;">
+        <div style=" max-width: 100%;">
+            <h1 style="color: rgb(14, 126, 190); font-family: 'Oxygen', sans-serif; font-size: 50px;"><strong>Clínica Veterinária PetLândia</strong> </h1>
+            <p style="color: rgb(10, 97, 148); font-size: 20px;"><i> "Onde seu amiguinho está sempre feliz!!!"</i></p>
+        </div>            
+        <img src="./assets/logo.jpg" alt="Logo da clinica, cachorro e gato verdes" style="max-width: 150px; height: 150px; border-radius: 50%; " >
+    </div>
+</header>
+
 <table>
 
     <colgroup>
