--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <title>PetLândia</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon.png">
     <style>
         ul {
             list-style-type: none;
@@ -16,14 +20,16 @@
 
 <body>
     <header>
-        <div>
-            <h1>Clínica Veterinária PetLândia</h1>
-            <img src="" alt="">
-            <p>"Onde seu amiguinho está sempre feliz!!!"</p>
+        <div style="background-color: rgba(142, 238, 238, 0.651); border-radius: 10px; padding: 20px; max-width: 100%; display: flex; justify-content: space-between;">
+            <div style=" max-width: 100%;">
+                <h1 style="color: rgb(14, 126, 190); font-family: 'Oxygen', sans-serif; font-size: 50px;"><strong>Clínica Veterinária PetLândia</strong> </h1>
+                <p style="color: rgb(10, 97, 148); font-size: 20px;"><i> "Onde seu amiguinho está sempre feliz!!!"</i></p>
+            </div>            
+            <img src="./assets/logo.jpg" alt="Logo da clinica, cachorro e gato verdes" style="max-width: 150px; height: 150px; border-radius: 50%; " >
         </div>
     </header>
 
-    <main>
+    <main >
         <div class="container">
             <ul>
                 <li> <a href="./index.html" title="Ínicio" target="_blank">Inicio</a></li>
@@ -32,6 +38,8 @@
                 <li> <a href="./contact.html" title="Fale Conosco" target="_blank">Fale conosco</a></li>
                 
             </ul>
+
+            <video src="./assets/docDog.mp4" autoplay style="border-radius: 15px; width: 100px;"  alt="Video de cachorro vestido de médico"  ></video>
         </div>
 
         <div class="main">
