--- a/about.html
+++ b/about.html
@@ -8,6 +8,19 @@
     </div>
 </header>
 
+<main style="display: flex; ">
+    <div style="background-color: rgba(142, 203, 238, 0.651); border-radius: 10px; margin: 10px 10px 10px 0; padding: 10px; width: 200px; height: 500px;">
+        <ul class="menu" style="list-style-type: none; padding: 0; color: rgb(63, 63, 243);">
+            <li> <a href="./index.html" title="Ínicio" target="_blank">INÍCIO</a></li>
+            <li> <a href="./about.html" title="Conheça nossa História" target="_blank">SOBRE</a></li>
+            <li> <a href="./specialties.html" title="Conheça nossas Especialidades" target="_blank">ESPECIALIDADES</a></li>
+            <li> <a href="./contact.html" title="Fale Conosco" target="_blank">FALE CONOSCO</a></li>
+            
+        </ul>
+
+        <video src="./assets/docDog.mp4" autoplay style="border-radius: 15px; width: 150px; "  alt="Video de cachorro vestido de médico"  a></video>
+    </div>
+
 <table>
 
     <colgroup>
@@ -55,3 +68,5 @@
     <h4>ATENÇÃO:</h4>
     <P>Atendimentos com especcialidades, somente com horário agendado. Nossos atendimentos de emerêncgia, contam com uma equipe clínica e qualificada, caso seja necessário atendimento com especialidades, agendaremos o mais breve possível.</P>
 </div>
+
+</main>
