--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             list-style-type: none;
             padding: 0;
             color: rgb(63, 63, 243);
-        }
+        };
+
+    
     </style>
 </head>
 
@@ -29,20 +31,20 @@
         </div>
     </header>
 
-    <main >
-        <div class="container">
-            <ul>
-                <li> <a href="./index.html" title="Ínicio" target="_blank">Inicio</a></li>
-                <li> <a href="./about.html" title="Conheça nossa História" target="_blank">Sobre</a></li>
-                <li> <a href="./specialties.html" title="Conheça nossas Especialidades" target="_blank">Especialidades</a></li>
-                <li> <a href="./contact.html" title="Fale Conosco" target="_blank">Fale conosco</a></li>
+    <main style="display: flex; ">
+        <div style="background-color: rgba(142, 203, 238, 0.651); border-radius: 10px; margin: 10px 10px 10px 0; padding: 10px; width: 200px; height: 500px;">
+            <ul class="menu">
+                <li> <a href="./index.html" title="Ínicio" target="_blank">INÍCIO</a></li>
+                <li> <a href="./about.html" title="Conheça nossa História" target="_blank">SOBRE</a></li>
+                <li> <a href="./specialties.html" title="Conheça nossas Especialidades" target="_blank">ESPECIALIDADES</a></li>
+                <li> <a href="./contact.html" title="Fale Conosco" target="_blank">FALE CONOSCO</a></li>
                 
             </ul>
 
-            <video src="./assets/docDog.mp4" autoplay style="border-radius: 15px; width: 100px;"  alt="Video de cachorro vestido de médico"  ></video>
+            <video src="./assets/docDog.mp4" autoplay style="border-radius: 15px; width: 150px; "  alt="Video de cachorro vestido de médico"  a></video>
         </div>
 
-        <div class="main">
+        <div class="main" >
             <p>A Clínica Veterinária Happy Pet, foi criada para atender sas necessidades na assistência à saúde de cães e gatos, além de animais silvestres e exóticos, prestando serviços de qualidade, através de uma equipe de Veterinários selecionadas.</p>
 
             <p>Nossas instalações possuem consultório veterinário, sala de cirurgia, laboratório e espaço de internação que proporcionarão todo o conforto, bem estar e segurança necessários à boa recuperação do seu animal. <br>
