--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,19 @@
     </div>
 </header>
 
+<main style="display: flex; ">
+    <div style="background-color: rgba(142, 203, 238, 0.651); border-radius: 10px; margin: 10px 10px 10px 0; padding: 10px; width: 200px; height: 500px;">
+        <ul class="menu">
+            <li> <a href="./index.html" title="Ínicio" target="_blank">INÍCIO</a></li>
+            <li> <a href="./about.html" title="Conheça nossa História" target="_blank">SOBRE</a></li>
+            <li> <a href="./specialties.html" title="Conheça nossas Especialidades" target="_blank">ESPECIALIDADES</a></li>
+            <li> <a href="./contact.html" title="Fale Conosco" target="_blank">FALE CONOSCO</a></li>
+            
+        </ul>
+
+        <video src="./assets/docDog.mp4" autoplay style="border-radius: 15px; width: 150px; "  alt="Video de cachorro vestido de médico"  a></video>
+    </div>
+
 <form action="">
     <fieldset > 
         <legend>ENTRE EM CONTATO</legend>
@@ -41,3 +54,4 @@
     </fieldset>
 </form>
 
+</main>
