Correcting Header & Footer

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
         <div style="background-color: rgba(142, 203, 238, 0.651); border-radius: 10px; margin: 10px 10px 10px 0; padding: 10px; width: 150px; height: 100%;">
             <ul class="menu" > <strong>
-                <li> <a href="./index.html" title="Ínicio" target="_blank">INÍCIO</a></li>
-                <li> <a href="./about.html" title="Conheça nossa História" target="_blank">SOBRE</a></li>
-                <li> <a href="./specialties.html" title="Conheça nossas Especialidades" target="_blank">ESPECIALIDADES</a></li>
-                <li> <a href="./contact.html" title="Fale Conosco" target="_blank">FALE CONOSCO</a></li>
+                <li> <a href="./index.html" title="Ínicio">INÍCIO</a></li>
+                <li> <a href="./about.html" title="Conheça nossa História">SOBRE</a></li>
+                <li> <a href="./specialties.html" title="Conheça nossas Especialidades" >ESPECIALIDADES</a></li>
+                <li> <a href="./contact.html" title="Fale Conosco">FALE CONOSCO</a></li>
             </strong>
             </ul>
 
@@ -78,7 +78,7 @@
                 <a href="https://www.facebook.com/" target=_blank><img src="./assets/facebook.png" alt="Ícone com link para Facebook"style="width: 20px; margin: 5px;"></a> 
                 <a href="https://wa.me/11999991234" target=_blank><img src="./assets/whatsapp.png" alt="Ícone com link para WhatsApp" style="width: 20px; margin: 5px;"></a> 
             </div>
-        
-    </div>
+        </div>
+    </footer>
 </body>
 </html>
