--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,15 @@
 <header style="display: flex;">
     <img src="./assets/logo.jpg" alt="Logo da clinica, cachorro e gato verdes" style="width: 190px; height: 150px; border-radius: 50%;margin: 10px 10px 0 10px" >
     <div style="background-color: rgba(142, 238, 238, 0.651); border-radius: 10px; padding: 20px; width: 100%; display: flex; justify-content: space-between;">
-        <div style=" max-width: 100%;">
+        <div style="width: 100%;">
             <h1 style="color: rgb(14, 126, 190); font-family: 'Oxygen', sans-serif; font-size: 40px;"><strong>Clínica Veterinária PetLândia</strong> </h1>
-            <p style="color: rgb(10, 97, 148); font-size: 20px;"><i> "Onde seu amiguinho está sempre feliz!!!"</i></p>
+            <p style="color: rgb(10, 97, 148); font-size: 20px; text-align: end"><i> "Onde seu amiguinho está sempre feliz!!!"</i></p>
         </div>            
-        
     </div>
 </header>
 
 <main style="display: flex; ">
-    <div style="background-color: rgba(142, 203, 238, 0.651); border-radius: 10px; margin: 10px 10px 10px 0; padding: 10px; width: 150px; height: 100%;">
+    <div style="background-color: rgba(142, 203, 238, 0.651); border-radius: 10px; margin: 10px 10px 10px 0; padding: 10px; width: 150px;  max-height: 100%;">
         <ul class="menu" style="list-style-type: none; padding: 0;"> <strong>
             <li> <a href="./index.html" title="Ínicio">INÍCIO</a></li>
             <li> <a href="./about.html" title="Conheça nossa História">SOBRE</a></li>
