--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
             <div style="width: 100%;">
                 <h1 style="color: rgb(14, 126, 190); font-family: 'Oxygen', sans-serif; font-size: 40px;"><strong>Clínica Veterinária PetLândia</strong> </h1>
                 <p style="color: rgb(10, 97, 148); font-size: 20px; text-align: end"><i> "Onde seu amiguinho está sempre feliz!!!"</i></p>
-            </div>  
-            <img src="./assets/coelho.jpg" alt="Imagem de coleho no veterinários"style="width: 190px; height: 150px; border-radius: 15px; margin-left: 30px">          
+            </div>            
+            <img src="./assets/coelho.jpg" alt="Imagem de coelho com veterinários"style="width: 180px; height: 160px; border-radius: 15px; margin-left: 30px">
         </div>
     </header>
 
@@ -80,5 +80,4 @@
             </div>
         </div>
     </footer>
-
 </body>
