--- a/specialties.html
+++ b/specialties.html
@@ -6,7 +6,7 @@
                 <h1 style="color: rgb(14, 126, 190); font-family: 'Oxygen', sans-serif; font-size: 40px;"><strong>Clínica Veterinária PetLândia</strong> </h1>
                 <p style="color: rgb(10, 97, 148); font-size: 20px; text-align: end"><i> "Onde seu amiguinho está sempre feliz!!!"</i></p>
             </div>            
-            <img src="./assets/gatoMesclado.jpeg" alt="Imagem de gato na natureza"style="width: 180px; height: 160px; border-radius: 15px; margin-left: 30px">
+            <img src="./assets/cachorroOftamo.jpg" alt="Imagem de Cachorro com veterinários"style="width: 180px; height: 160px; border-radius: 15px; margin-left: 30px">
         </div>
     </header>
 
